--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="base">
+    <header class="CABEÇALHO">
+    <img src="unnamed.png" alt="">
+    <h1>LA SALLE SECOND DẼ</h1>
+    </header>
+    <section class="CORPO">
+        
     
+    </section>
 </body>
 </html>
