--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 </head>
 <body class="base">
     <header class="CABEÇALHO">
-    <img src="unnamed.png" alt="">
-    <h1>LA SALLE SECOND DẼ</h1>
+       <img class="foto-cabeçalho" src="unnamed-removebg-preview.png" alt="">
+       <ul>
+<li>escola</li>
+<li>aluno</li>
+
+       </ul>
     </header>
-    <section class="CORPO">
-        
+    <h2>Colégio Estadual La Salle</h2>
+
     
-    </section>
+
+
 </body>
 </html>
