--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 
        </ul>
     </header>
-    <h2>Colégio Estadual La Salle</h2>
+    <section class="texto">
+        
+<img class="fotodaescola" src="Colégio Estadual.jpg" alt="">
+<h1>OI RAPAZIADA</h1>
 
     
-
+</section>
 
 </body>
 </html>
